2102071927 last changes for submodules

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,20 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+/target
+.classpath
+.project
+.settings
+.springBeans
+.idea/
+
+**/target/
+**/.classpath
+**/.project
+**/.settings
+**/.springBeans
+**/.idea/
+
+**/.settings/
+**/.project/
